k8s/gke/apps/nct-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blockchain-nct
  namespace: sdypp
spec:
  type: LoadBalancer
  selector:
    app: blockchain-nct
  ports:
    - port: 80
      targetPort: 8000
